# tncpresearch

./: LICENSE  MANIFEST.in  QUICK_START.md  README.md  TNCP_INSTALLATION_GUIDE.md  __init__.py  config.yaml  germ_layer_analysis.py  main.py  pyproject.toml  setup.py  test_basic.py
